--- a/index.html
+++ b/index.html
@@ -7,126 +7,156 @@
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
-    
-<section class="hero">
-  <div class="container">
-    <div class="hero-inner">
-      <h1>GESTALT</h1>
+    <section class="hero">
+      <div class="container">
+        <div class="hero-inner">
+          <h1>GESTALT</h1>
 
-      <div class="img">
-        <div class="transparent"></div>
+          <div class="img">
+            <div class="transparent"></div>
+          </div>
+
+          <button>게슈탈트법칙 보기</button>
+        </div>
       </div>
+    </section>
 
-      <button>게슈탈트법칙 보기</button>
-    </div>
-  </div>
-</section>
+    <section class="definition-section">
+      <div class="container">
+        <div id="definition">
+          <h2>게슈탈트란?</h2>
+          <p>
+            사물을 볼 때 개별 요소가 아닌 구성된 전체 패턴으로 인식한다는 개념.
+          </p>
+          <div id="closure"></div>
+        </div>
+      </div>
+    </section>
 
+    <section class="timeline">
+      <!-- 에렌펠스 -->
+      <div class="container">
+        <div class="timeline-grid">
+          <!-- 왼쪽 라인 + 연도 블록 -->
+          <div class="time-mark">
+            <span class="line"></span>
+            <span class="year">1890</span>
+          </div>
 
+          <!-- 텍스트 -->
+          <div class="text">
+            <h2>[개념의 탄생]</h2>
+            <p>
+              크리스티안 폰 에렌펠스는 처음으로<br />
+              게슈탈트라는 개념을 정의하며<br />
+              요소들의 관계에서 나타나는<br />
+              전체적 성질을 ‘형태적 질’이라 명명.
+            </p>
+          </div>
 
-<section class="definition-section">
-  <div class="container">
-    <div id="definition">
-      <h2>게슈탈트란?</h2>
-      <p>
-        사물을 볼 때 개별 요소가 아닌 구성된 전체 패턴으로 인식한다는 개념.
-      </p>
-      <div id="closure"></div>
-    </div>
-  </div>
-</section>
+          <!-- 이미지 -->
+          <figure class="portrait">
+            <img src="./image/Ehrenfels.jpg" alt="Christian von Ehrenfels" />
+          </figure>
 
+          <!-- 이름 -->
+          <figcaption class="name">
+            Christian von Ehrenfels<br />
+            (1859~1932)
+          </figcaption>
+        </div>
+      </div>
+    </section>
 
-<section class="timeline">
-  <div class="container">
-    <div class="timeline-grid">
+    <section class="timeline-berlin">
+      <!-- 베르트하이머 -->
 
-      <!-- 왼쪽 라인 + 연도 블록 -->
       <div class="time-mark">
         <span class="line"></span>
-        <span class="year">1890</span>
+        <span class="year">1910</span>
       </div>
 
-      <!-- 텍스트 -->
-      <div class="text">
-        <h2>[개념의 탄생]</h2>
+      <!-- 텍스트 : flex 중앙 정렬 -->
+      <div class="text-center">
+        <h2>[베를린 학파 형성]</h2>
         <p>
-          크리스티안 폰 에렌펠스는 처음으로<br />
-          게슈탈트라는 개념을 정의하며<br />
-          요소들의 관계에서 나타나는<br />
-          전체적 성질을 ‘형태적 질’이라 명명.
+          1910년 당대 심리학의 주류였던 요소주의에 반발하여 <br />
+          에렌펠스의 형태적 질 개념을 기반으로 <br />
+          막스 베르트하이머, 볼프강 퀼러, 쿠르트 코프카의
+          <b>‘베를린 학파’</b>가 형성.
         </p>
       </div>
 
-      <!-- 이미지 -->
-      <figure class="portrait">
-        <img src="./image/Ehrenfels.jpg" alt="Christian von Ehrenfels" />
-      </figure>
+      <!-- 철학자 사진 (여기만 grid) -->
+      <div class="philosophers-grid">
+        <figure class="philosopher left">
+          <img src="./image/Koffka.jpg" alt="Kurt Koffka" />
+          <figcaption>Kurt Koffka</figcaption>
+        </figure>
 
-      <!-- 이름 -->
-      <figcaption class="name">
-        Christian von Ehrenfels<br />
-        (1859~1932)
-      </figcaption>
+        <figure class="philosopher main">
+          <img src="./image/Wertheimer.jpg" alt="Max Wertheimer" />
+          <figcaption>Max Wertheimer</figcaption>
+        </figure>
 
-    </div>
-  </div>
-</section>
-
-
-
-
-    </div>
-    <div>
-      <!-- 베를린학파 -->
-      <span class="line"></span>
-      <span class="year">1910</span>
-      <h2>[베를린 학파 형성]</h2>
-      <p>
-        1910년 당대 심리학의 주류였던 요소주의에 반발하여 <br />에렌펠스의
-        형태적 질 개념을 기반으로 <br />막스 베르트하이머, 볼프강 퀼러, 쿠르트
-        코프카의 <b>‘베를린 학파’</b>가 형성.
-      </p>
-      <div>
-        <!-- 3철학자 사진 -->
-        <img src="./image/Koffka.jpg" alt="koffka" />
-        <p calss="name">Kurt Koffka</p>
-
-        <img src="./image/Wertheimer.jpg" alt="Wertheimer" />
-        <p calss="name">Max Wertheimer</p>
-
-        <img src="./image/Kühler.jpg" alt="Kühler" />
-        <p calss="name">Wolfgang Köhler</p>
+        <figure class="philosopher right">
+          <img src="./image/Kühler.jpg" alt="Wolfgang Köhler" />
+          <figcaption>Wolfgang Köhler</figcaption>
+        </figure>
       </div>
-      <p>
-        이전까지 철학적 개념으로만 존재하던 게슈탈트를<br />실제 지각 과정에서
-        어떻게 작동하는지 실험과학적으로 검증 시도.
-      </p>
-    </div>
 
-    <div>
-      <!-- 파이현상 -->
-      <span class="line"></span>
-      <span class="year">1912</span>
-      <div>
-        <img src="./image/light.png" alt="light" />
-      </div>
-      <h2>[파이현상]</h2>
-      <p>
-        베르트하이머가 번갈아 켜지는 철도 신호/연속 구조물 보며 정지된 대상이
-        움직이는 것처럼 보이는 착시에서 두개의 정지된 빛이 짤은 간격으로 번갈아
-        깜박거린 것으로 실제 움직임이 없음에도 빛이 이동하는 것처럼 보인다는
-        것을 발견.
+      <p class="text-center">
+        이전까지 철학적 개념으로만 존재하던 게슈탈트를<br />
+        실제 지각 과정에서 어떻게 작동하는지 실험과학적으로 검증 시도.
       </p>
-      <div>
-        <img src="./image/Wertheimer.jpg" alt="Wertheimer" />
+    </section>
+
+    <section class="timeline-phi">
+      <!-- 연도 & 라인 (기존 유지) -->
+      <div class="time-mark">
+        <span class="line"></span>
+        <span class="year">1912</span>
       </div>
-      <h3>“운동 그 자체가 독립된<br />전체적 지각이다"</h3>
-      <p>
-        a와b의 시공간적 관계가 두개를 합한것과는 다른 새로운 전체을 만들어낼 수
-        있다는 사실을 검증.
-      </p>
-    </div>
+
+      <!-- 상단 이미지 -->
+      <div class="phi-hero">
+        <img src="./image/light.png" alt="철도 신호 파이현상" />
+      </div>
+
+      <!-- 좌우 마진 120 담당 -->
+      <div class="grid-container">
+        <div class="phi-grid">
+          <!-- 제목 -->
+          <h2 class="phi-title">[파이현상]</h2>
+
+          <!-- 설명 -->
+          <p class="phi-desc">
+            베르트하이머가 번갈아 켜지는 철도 신호/연속 구조물을 보며 정지된
+            대상이 움직이는 것처럼 보이는 착시에서, 두 개의 정지된 빛이 짧은
+            간격으로 번갈아 깜박일 때 실제 움직임이 없음에도 빛이 이동하는
+            것처럼 지각된다는 사실을 발견.
+          </p>
+
+          <!-- 사진 -->
+          <figure class="phi-portrait">
+            <img src="./image/Wertheimer.jpg" alt="Max Wertheimer" />
+          </figure>
+
+          <!-- 인용 -->
+          <div class="phi-quote">
+            <h3>
+              “운동 그 자체가<br />
+              독립된 전체적 지각이다”
+            </h3>
+            <p>
+              a와 b의 시공간적 관계는<br />
+              두 개를 단순히 합한 것과는 다른<br />
+              새로운 전체를 만들어낼 수 있음을 검증.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <div>
       <!-- 장이론 -->
