--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
     </section>
 
     <section class="timeline-phi">
+      <!--파이-->
       <!-- 연도 & 라인 (기존 유지) -->
       <div class="time-mark">
         <span class="line"></span>
@@ -158,85 +159,77 @@
       </div>
     </section>
 
-    <div>
-      <!-- 장이론 -->
-      <span class="lineCenter"></span>
-      <span class="year">1920</span>
-      <h2>[장이론]</h2>
-      <p>쾰러는 지각을 뇌 전체가 상호작용하는 하나의 ‘장(Field)’으로 비유.</p>
-      <p>
-        이 장은 자극이 영향을 주고받으며 가장 안정적인 형태,<br />즉, 에너지가
-        최소화된 상태를 찾으려는 경향.
-      </p>
-      <div>
-        <img src="./image/field.png" alt="field" />
-      </div>
-      <div class="car">
-        <img src="./image/zigzag.png" alt="zigzag" />
-        <p>
-          이는 운전할 때 울퉁불퉁한 길보다 부드러운 곡선의 길이 덜 흔들리고
-          편안한 것처럼,
-        </p>
-      </div>
+    <section class="timeline-field">
+      <div class="field-center">
+        <span class="lineCenter"></span>
+        <span class="year">1920</span>
 
-      <div class="car">
-        <img src="./image/flat.png" alt="flat" />
-        <p>
-          지각도 복잡한 해석보다는 연속적이고 매끄러운 구조를 택해 심리적 안정
-          상태를 유지하려 한다고 볼 수 있다.
-        </p>
-      </div>
+        <h2>[장이론]</h2>
 
-      <div>
-        <!-- 좋은형태법칙 -->
-        <h3>좋은 형태 법칙<br />(Law of Prägnanz)</h3>
-
+        <p>쾰러는 지각을 뇌 전체가 상호작용하는 하나의 ‘장(Field)’으로 비유.</p>
         <p>
-          따라서 우리가 사물을 하나의 ‘형태’로 인식하는 것은, 뇌 속의 장이
-          자극을 전체적으로 조정하며 가장 단순하고 조화로운 구조로 스스로
-          정리하기 때문이다.
+          이 장은 자극이 영향을 주고받으며 가장 안정적인 형태,<br />
+          즉, 에너지가 최소화된 상태를 찾으려는 경향.
         </p>
 
-        <p>
-          이 과정에서 부분보다 전체의 관계와 패턴이 우선하게 되며, 이러한 조직
-          원리가 바로 게슈탈트의 핵심인 <br />
-          <b>‘좋은 형태의 법칙’</b>으로 이어진다.
-        </p>
-
-        <img src="./image/Law of Prägnanz.png" alt="Law of Prägnanz" />
-
-        <img
-          src="./image/Law of Prägnanz_b.png"
-          alt="Law of Prägnanz black and white"
-        />
+        <img src="./image/field.png" alt="field" class="field-image" />
       </div>
-    </div>
 
-    <div>
-      <!--지각조직법칙 -->
-      <span class="line"></span>
-      <span class="year">1923</span>
+      <div class="grid-container">
+        <div class="field-grid">
+          <div class="car car-left">
+            <img src="./image/zigzag.png" alt="zigzag" />
+            <p>
+              이는 운전할 때 울퉁불퉁한 길보다 부드러운 곡선의 길이 덜 흔들리고
+              편안한 것처럼,
+            </p>
+          </div>
 
-      <h2>[지각 조직 법칙]</h2>
-      <h3>기본 5법칙의 정립</h3>
+          <div class="car car-right">
+            <img src="./image/flat.png" alt="flat" />
+            <p>
+              지각도 복잡한 해석보다는 연속적이고 매끄러운 구조를 택해 심리적
+              안정 상태를 유지하려 한다고 볼 수 있다.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-      <p>
-        베르트하이머는 「지각 조직 법칙」에서 <br />”인간의 시지각은 처음부터
-        조직화되어 있다”고 주장하며,<br />지각이 요소들의 합이 아닌 전체적
-        구조로 형성된다고 말한다.
-      </p>
+    <section class="timeline-rule">
+      <div class="grid-container">
+        <div class="rule-grid">
+          <span class="line"></span>
+          <span class="year"><br /><br />1923</span>
 
-      <p>
-        지각 조직 법칙에서는<br />
-        근접, 유사, 연속성, 폐쇄, 공동운명<br />
-        5가지 지각 군집화 요인으로 시지각의 작용을 설명한다.
-      </p>
+          <div class="rule-text">
+            <h2><br />[지각 조직 법칙]</h2>
+            <h3>기본 5법칙의 정립</h3>
 
-      <p>
-        이러한 경향은 ‘좋은 형태, <br />즉 단순하고 안정적인 구조로 수렴하려는
-        성향의 결과이며 <br />이는 게슈탈트 이론의 핵심 법칙 체계를 이루었다.
-      </p>
-    </div>
-    <button>게슈탈트법칙 보기</button>
+            <p>
+              베르트하이머는 「지각 조직 법칙」에서 <br />
+              “인간의 시지각은 처음부터 조직화되어 있다”고 주장하며,<br />
+              지각이 요소들의 합이 아닌 전체적 구조로 형성된다고 말한다.
+            </p>
+
+            <p>
+              지각 조직 법칙에서는<br />
+              근접, 유사, 연속성, 폐쇄, 공동운명<br />
+              5가지 지각 군집화 요인으로 시지각의 작용을 설명한다.
+            </p>
+
+            <p>
+              이러한 경향은 ‘좋은 형태’,<br />
+              즉 단순하고 안정적인 구조로 수렴하려는 성향의 결과이며<br />
+              이는 게슈탈트 이론의 핵심 법칙 체계를 이루었다.
+            </p>
+          </div>
+
+          <div class="rule-button">
+            <button class="ghost-btn">게슈탈트법칙 보기</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
