--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
         <span class="year">1910</span>
       </div>
 
-      <!-- 텍스트 : flex 중앙 정렬 -->
       <div class="text-center">
         <h2>[베를린 학파 형성]</h2>
         <p>
@@ -87,7 +86,7 @@
         </p>
       </div>
 
-      <!-- 철학자 사진 (여기만 grid) -->
+      <!-- 철학자 사진 -->
       <div class="philosophers-grid">
         <figure class="philosopher left">
           <img src="./image/Koffka.jpg" alt="Kurt Koffka" />
@@ -112,8 +111,6 @@
     </section>
 
     <section class="timeline-phi">
-      <!--파이-->
-      <!-- 연도 & 라인 (기존 유지) -->
       <div class="time-mark">
         <span class="line"></span>
         <span class="year">1912</span>
@@ -124,13 +121,10 @@
         <img src="./image/light.png" alt="철도 신호 파이현상" />
       </div>
 
-      <!-- 좌우 마진 120 담당 -->
       <div class="grid-container">
         <div class="phi-grid">
-          <!-- 제목 -->
           <h2 class="phi-title">[파이현상]</h2>
 
-          <!-- 설명 -->
           <p class="phi-desc">
             베르트하이머가 번갈아 켜지는 철도 신호/연속 구조물을 보며 정지된
             대상이 움직이는 것처럼 보이는 착시에서, 두 개의 정지된 빛이 짧은
@@ -138,12 +132,10 @@
             것처럼 지각된다는 사실을 발견.
           </p>
 
-          <!-- 사진 -->
           <figure class="phi-portrait">
             <img src="./image/Wertheimer.jpg" alt="Max Wertheimer" />
           </figure>
 
-          <!-- 인용 -->
           <div class="phi-quote">
             <h3>
               “운동 그 자체가<br />
@@ -160,6 +152,7 @@
     </section>
 
     <section class="timeline-field">
+      <!-- 장이론 -->
       <div class="field-center">
         <span class="lineCenter"></span>
         <span class="year">1920</span>
@@ -193,6 +186,42 @@
             </p>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="timeline-good">
+      <div class="goodShape">
+        <!-- 텍스트 영역 -->
+        <span class="good-text">
+          <h3>
+            좋은 형태 법칙<br />
+            <em>(Law of Prägnanz)</em>
+          </h3>
+
+          <p>
+            따라서 우리가 사물을 하나의 ‘형태’로 인식하는 것은,<br />
+            뇌 속의 장이 자극을 전체적으로 조정하며 가장 단순하고 조화로운
+            구조로 스스로 정리하기 때문이다.
+          </p>
+
+          <p>
+            이 과정에서 부분보다 전체의 관계와 패턴이 우선하게 되며,<br />
+            이러한 조직 원리가 바로 게슈탈트의 핵심인
+            <b>‘좋은 형태의 법칙’</b>으로 이어진다.
+          </p>
+        </span>
+
+        <!-- 이미지 영역 -->
+        <span class="good-images">
+          <img
+            src="./image/Law of Prägnanz.png"
+            alt="Law of Prägnanz example 1"
+          />
+          <img
+            src="./image/Law of Prägnanz_b.png"
+            alt="Law of Prägnanz example 2"
+          />
+        </span>
       </div>
     </section>
 
