이미지네임수정

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
           <!-- 이미지 -->
           <figure class="portrait">
-            <img src="./image/Ehrenfels.jpg" alt="Christian von Ehrenfels" />
+            <img src="./image/ehrenfels.jpg" alt="Christian von Ehrenfels" />
           </figure>
 
           <!-- 이름 -->
@@ -89,17 +89,17 @@
       <!-- 철학자 사진 -->
       <div class="philosophers-grid">
         <figure class="philosopher left">
-          <img src="./image/Koffka.jpg" alt="Kurt Koffka" />
+          <img src="./image/koffka.jpg" alt="kurt koffka" />
           <figcaption>Kurt Koffka</figcaption>
         </figure>
 
         <figure class="philosopher main">
-          <img src="./image/Wertheimer.jpg" alt="Max Wertheimer" />
+          <img src="./image/wertheimer.jpg" alt="Max Wertheimer" />
           <figcaption>Max Wertheimer</figcaption>
         </figure>
 
         <figure class="philosopher right">
-          <img src="./image/Kühler.jpg" alt="Wolfgang Köhler" />
+          <img src="./image/kuhler.jpg" alt="Wolfgang Köhler" />
           <figcaption>Wolfgang Köhler</figcaption>
         </figure>
       </div>
@@ -215,11 +215,11 @@
         <!-- 이미지 영역 -->
         <span class="good-images">
           <img
-            src="./image/Law of Prägnanz.png"
+            src="./image/law_of_pregnanz.png"
             alt="Law of Prägnanz example 1"
           />
           <img
-            src="./image/Law of Prägnanz_b.png"
+            src="./image/law_of_pregnanz_b.png"
             alt="Law of Prägnanz example 2"
           />
         </span>
