이미지수정_4

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
       <!-- 철학자 사진 -->
       <div class="philosophers-grid">
         <figure class="philosopher left">
-          <img src="./image/koffka.jpg" alt="kurt koffka" />
+          <img src="./image/k_koffka.jpg" alt="kurt koffka" />
           <figcaption>Kurt Koffka</figcaption>
         </figure>
 
         <figure class="philosopher main">
-          <img src="./image/wertheimer.jpg" alt="Max Wertheimer" />
+          <img src="./image/Wertheimer.jpg" alt="Max Wertheimer" />
           <figcaption>Max Wertheimer</figcaption>
         </figure>
 
@@ -192,9 +192,8 @@
         <span class="good-text">
           <h3>
             좋은 형태 법칙<br />
-            <em>(Law of Prägnanz)</em>
+            (Law of Prägnanz)
           </h3>
-
           <p>
             따라서 우리가 사물을 하나의 ‘형태’로 인식하는 것은,<br />
             뇌 속의 장이 자극을 전체적으로 조정하며 가장 단순하고 조화로운
