이미지 다시 수정

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
           <!-- 이미지 -->
           <figure class="portrait">
-            <img src="./image/ehrenfels.jpg" alt="Christian von Ehrenfels" />
+            <img src="./image/Ehrenfels.jpg" alt="Christian von Ehrenfels" />
           </figure>
 
           <!-- 이름 -->
