이미지수정_5

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
           <!-- 이미지 -->
           <figure class="portrait">
-            <img src="./image/Ehrenfels.jpg" alt="Christian von Ehrenfels" />
+            <img src="./image/e-hrenfels.jpg" alt="Christian von Ehrenfels" />
           </figure>
 
           <!-- 이름 -->
@@ -87,12 +87,12 @@
       <!-- 철학자 사진 -->
       <div class="philosophers-grid">
         <figure class="philosopher left">
-          <img src="./image/k_koffka.jpg" alt="kurt koffka" />
+          <img src="./image/k-offka.jpg" alt="kurt koffka" />
           <figcaption>Kurt Koffka</figcaption>
         </figure>
 
         <figure class="philosopher main">
-          <img src="./image/Wertheimer.jpg" alt="Max Wertheimer" />
+          <img src="./image/w-ertheimer.jpg" />
           <figcaption>Max Wertheimer</figcaption>
         </figure>
 
