--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="transparent"></div>
           </div>
 
-          <button>게슈탈트법칙 보기</button>
+          <!-- <button>게슈탈트법칙 보기</button>-->
         </div>
       </div>
     </section>
@@ -251,7 +251,7 @@
           </div>
 
           <div class="rule-button">
-            <button class="ghost-btn">게슈탈트법칙 보기</button>
+            <!-- <button class="ghost-btn">게슈탈트법칙 보기</button> -->
           </div>
         </div>
       </div>
